shift loading to avoid visible overlap

--- a/src/styles/_animation.scss
+++ b/src/styles/_animation.scss
@@ -27,7 +27,7 @@
     > main {
       background-image: $engine_loading_static_image, $engine_loading_static_image;
       background-repeat: repeat-x;
-      background-position: top 5px left, bottom 20px left;
+      background-position: top 10px left, bottom 30px left;
     }
 
     article.le-row-animation {
